--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,23 @@ permissions:
   contents: write
 
 jobs:
-  build-and-release:
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-latest
+            platform: linux/amd64
+            artifact: scdl-web-linux-amd64
+          - os: windows-latest
+            platform: windows/amd64
+            artifact: scdl-web-windows-amd64.exe
+          - os: macos-latest
+            platform: darwin/universal
+            artifact: scdl-web-darwin-universal
+
+    runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -22,16 +37,50 @@ jobs:
         with:
           go-version: "1.23"
 
-      - name: Build all platforms
-        run: make build-all
+      - name: Install Wails CLI
+        run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
 
-      - name: Create release
-        uses: softprops/action-gh-release@v2
+      - name: Install Linux dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
+
+      - name: Bundle backend files
+        run: make bundle
+
+      - name: Build
+        run: wails build -clean -platform ${{ matrix.platform }}
+
+      - name: Rename artifact (Linux)
+        if: runner.os == 'Linux'
+        run: mv build/bin/scdl-web build/bin/${{ matrix.artifact }}
+
+      - name: Rename artifact (macOS)
+        if: runner.os == 'macOS'
+        run: mv build/bin/scdl-web build/bin/${{ matrix.artifact }}
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.artifact }}
+          path: build/bin/${{ matrix.artifact }}*
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Collect binaries
+        run: |
+          mkdir -p release
+          find artifacts -type f -exec cp {} release/ \;
+          ls -la release/
+
+      - uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
-          files: |
-            dist/scdl-web-linux-amd64
-            dist/scdl-web-linux-arm64
-            dist/scdl-web-windows-amd64.exe
-            dist/scdl-web-darwin-amd64
-            dist/scdl-web-darwin-arm64
+          files: release/*
