Fix Linux CI: use xvfb-run for wails build (headless display)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
       # ── Linux: AppImage ──────────────────────────────────────────────────
       - name: Build Linux
         if: runner.os == 'Linux'
-        run: wails build -clean -platform linux/amd64
+        run: xvfb-run wails build -clean -platform linux/amd64
 
       - name: Download appimagetool
         if: runner.os == 'Linux'
