Fix Linux CI: use webkit2_41 build tag for Ubuntu 24.04 compatibility

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       # ── Linux: AppImage ──────────────────────────────────────────────────
       - name: Build Linux
         if: runner.os == 'Linux'
-        run: xvfb-run wails build -clean -platform linux/amd64
+        run: xvfb-run wails build -clean -platform linux/amd64 -tags webkit2_41
 
       - name: Download appimagetool
         if: runner.os == 'Linux'
