--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             platform: linux/amd64
           - os: windows-latest
             platform: windows/amd64
@@ -42,7 +42,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y \
             libgtk-3-dev \
-            libwebkit2gtk-4.1-dev \
+            libwebkit2gtk-4.0-dev \
             libayatana-appindicator3-dev \
             libfuse2
 
@@ -73,7 +73,7 @@ jobs:
       # ── Linux: AppImage ──────────────────────────────────────────────────
       - name: Build Linux
         if: runner.os == 'Linux'
-        run: xvfb-run wails build -clean -platform linux/amd64 -tags webkit2_41
+        run: xvfb-run wails build -clean -platform linux/amd64
 
       - name: Download appimagetool
         if: runner.os == 'Linux'
